apps/src/eks/eksackapp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eksack
  labels:
    app: eksack
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kart-deployment
  namespace: eksack
  labels:
    app: eksack
    service: kart
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: kart
  template:
    metadata:
      labels:
        app: eksack
        service: kart
    spec:
      restartPolicy: Always
      containers:
      - name: kart
        image: 194322967097.dkr.ecr.us-east-2.amazonaws.com/eksack/kart:1.5
        imagePullPolicy: Always
        ports:
         - containerPort: 8445
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: eksack
  labels:
    app: eksack
    service: product
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: product
  template:
    metadata:
      labels:
        app: eksack
        service: product
    spec:
      restartPolicy: Always
      containers:
      - name: product
        image: 194322967097.dkr.ecr.us-east-2.amazonaws.com/eksack/product:1.5
        imagePullPolicy: Always
        ports:
         - containerPort: 8444
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: eksack
  labels:
    app: eksack
    service: user
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: user
  template:
    metadata:
      labels:
        app: eksack
        service: user
    spec:
      restartPolicy: Always
      containers:
      - name: user
        image: 194322967097.dkr.ecr.us-east-2.amazonaws.com/eksack/user:1.5
        imagePullPolicy: Always
        ports:
         - containerPort: 8446
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: eksack
  labels:
    app: eksack
    service: webapp
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: webapp
  template:
    metadata:
      labels:
        app: eksack
        service: webapp
    spec:
      restartPolicy: Always
      containers:
      - name: webapp
        image: 194322967097.dkr.ecr.us-east-2.amazonaws.com/eksack/webapp:1.5
        imagePullPolicy: Always
        ports:
         - containerPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: eksack
  labels:
    app: eksack
    service: order
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 0
  selector:
    matchLabels:
      app: eksack
      service: order
  template:
    metadata:
      labels:
        app: eksack
        service: order
    spec:
      restartPolicy: Always
      containers:
      - name: order
        image: 194322967097.dkr.ecr.us-east-2.amazonaws.com/eksack/order:1.5
        imagePullPolicy: Always
        ports:
         - containerPort: 8448
---
apiVersion: v1
kind: Service
metadata:
  name: kart
  namespace: eksack
  labels:
    app: eksack
    service: kart
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: kart
  ports:
    - name: kart
      protocol: TCP
      port: 8445
      targetPort: 8445
---
apiVersion: v1
kind: Service
metadata:
  name: product
  namespace: eksack
  labels:
    app: eksack
    service: product
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: product
  ports:
    - name: product
      protocol: TCP
      port: 8444
      targetPort: 8444
---
apiVersion: v1
kind: Service
metadata:
  name: user
  namespace: eksack
  labels:
    app: eksack
    service: user
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: user
  ports:
    - name: user
      protocol: TCP
      port: 8446
      targetPort: 8446
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: eksack
  labels:
    app: eksack
    service: order
spec:
  type: ClusterIP
  selector:
    app: eksack
    service: order
  ports:
    - name: order
      protocol: TCP
      port: 8448
      targetPort: 8448
---
apiVersion: v1
kind: Service
metadata:
  name: webappnp
  namespace: eksack
  labels:
    service: webappnp
spec:
  type: NodePort
  selector:
    app: eksack
    service: webapp
  ports:
    - port: 80
      targetPort: 8443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: eksack
  labels:
    app: eksack
    service: webapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Application=webapp
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /healthcheck
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '60'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '30'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '5'
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true, load_balancing.algorithm.type=least_outstanding_requests
spec:
  rules:
   - http:
      paths:
       - path: /
         pathType: Prefix
         backend:
          service:
            name: webappnp
            port:
              number: 80
---
